--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <a href="#services">Services</a>
     <a href="#research">Research</a>
     <a href="#team">Team</a>
-    <a href="#contact">Contact</a>
+    <a href="#contact">Contact Us</a>
   </nav>
 </header>
 
@@ -72,15 +72,15 @@
   <h2>Leadership</h2>
   <div class="team-grid" style="max-width:400px; margin:auto; grid-template-columns:1fr;">
     <div class="team-card">
-      <img src="images/director.jpg" alt="Director Photo" />
+      <img src="images/1.jpg" alt="Director Photo" />
       <h4>Manish Kumar</h4>
       <p>Co‑founder & Director</p>
     </div>
   </div>
 
-  <h2 style="margin-top:60px;">Our Interns</h2>
+  <h2 style="margin-top:60px;">Our Team</h2>
   <div class="team-grid">
-    <div class="team-card"><img src="images/intern1.jpg"><h4>Varun V</h4><p>Cybersecurity Intern</p></div>
+    <div class="team-card"><img src="images/2.jpg"><h4>Varun V</h4><p>Cybersecurity Intern</p></div>
     <div class="team-card"><img src="images/intern2.jpg"><h4>Intern 2</h4><p>IoT Security Intern</p></div>
     <div class="team-card"><img src="images/intern3.jpg"><h4>Intern 3</h4><p>R&D Intern</p></div>
     <div class="team-card"><img src="images/intern4.jpg"><h4>Intern 4</h4><p>Embedded Systems Intern</p></div>
