--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <h2>Leadership</h2>
   <div class="team-grid" style="max-width:400px; margin:auto; grid-template-columns:1fr;">
     <div class="team-card">
-      <img src="images/1.jpg" alt="Director Photo" />
+      <img src="1.png" alt="Director Photo" />
       <h4>Manish Kumar</h4>
       <p>Co‑founder & Director</p>
     </div>
@@ -80,7 +80,7 @@
 
   <h2 style="margin-top:60px;">Our Team</h2>
   <div class="team-grid">
-    <div class="team-card"><img src="images/2.jpg"><h4>Varun V</h4><p>Cybersecurity Intern</p></div>
+    <div class="team-card"><img src="2.png"><h4>Varun V</h4><p>Cybersecurity Intern</p></div>
     <div class="team-card"><img src="images/intern2.jpg"><h4>Intern 2</h4><p>IoT Security Intern</p></div>
     <div class="team-card"><img src="images/intern3.jpg"><h4>Intern 3</h4><p>R&D Intern</p></div>
     <div class="team-card"><img src="images/intern4.jpg"><h4>Intern 4</h4><p>Embedded Systems Intern</p></div>
