--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <a href="#services">Services</a>
     <a href="#research">Research</a>
     <a href="#team">Team</a>
-    <a href="#contact">Contact Us</a>
+    <a href="#contact">Contact</a>
   </nav>
 </header>
 
@@ -74,11 +74,13 @@
     <div class="team-card">
       <img src="1.png" alt="Director Photo" />
       <h4>Manish Kumar</h4>
-      <p>Co‑founder & Director</p>
+      <p><strong>Co‑founder & Director</strong></p>
+      <p>Associate Professor, Department of Mathematics, BITS Pilani Hyderabad Campus</p>
+      <p>Research interests: Cryptography & Information Security, Digital Image Processing, Pseudo‑Differential Operators, Wavelet Analysis.</p>
     </div>
   </div>
 
-  <h2 style="margin-top:60px;">Our Team</h2>
+  <h2 style="margin-top:60px;">Our Interns</h2>
   <div class="team-grid">
     <div class="team-card"><img src="2.png"><h4>Varun V</h4><p>Cybersecurity Intern</p></div>
     <div class="team-card"><img src="images/intern2.jpg"><h4>Intern 2</h4><p>IoT Security Intern</p></div>
