--- a/index.html
+++ b/index.html
@@ -55,17 +55,136 @@
 <section id="services">
   <h2>Our Services</h2>
   <div class="services-grid">
-    <div class="service-card"><h3>Cybersecurity</h3><p>Threat analysis, enterprise protection and secure infrastructure development.</p></div>
-    <div class="service-card"><h3>IoT Security</h3><p>Embedded security, firmware validation and device-level protection.</p></div>
-    <div class="service-card"><h3>Quantum Cryptography</h3><p>Lightweight encryption and quantum-resistant algorithms.</p></div>
-    <div class="service-card"><h3>R&D & Innovation</h3><p>Cutting-edge research in AI security, cryptography and embedded systems.</p></div>
-    <div class="service-card"><h3>Training & Advisory</h3><p>Cybersecurity workshops, consulting and capability building.</p></div>
+
+    <div class="service-card" onclick="toggleService('cyber')">
+      <h3>Cybersecurity</h3>
+      <p>Threat analysis, enterprise protection and secure infrastructure development.</p>
+    </div>
+    <div id="cyber" class="service-detail" style="display:none; background:white; padding:25px; border-radius:12px; margin-top:10px; box-shadow:0 4px 12px rgba(0,0,0,0.08);">
+      <h3>Cybersecurity – Detailed Overview</h3>
+      <ul>
+        <li>Penetration Testing & Vulnerability Assessment</li>
+        <li>Secure Network Architecture Design</li>
+        <li>Threat Modeling & Attack Simulations</li>
+        <li>Zero‑Trust Security Implementation</li>
+        <li>Incident Response & Digital Forensics</li>
+      </ul>
+    </div>
+
+    <div class="service-card" onclick="toggleService('iot')">
+      <h3>IoT Security</h3>
+      <p>Embedded security, firmware validation and device-level protection.</p>
+    </div>
+    <div id="iot" class="service-detail" style="display:none; background:white; padding:25px; border-radius:12px; margin-top:10px; box-shadow:0 4px 12px rgba(0,0,0,0.08);">
+      <h3>IoT Security – Detailed Overview</h3>
+      <ul>
+        <li>Secure Firmware Development & Validation</li>
+        <li>Secure Bootloaders for IoT Hardware</li>
+        <li>Embedded Device Vulnerability Assessment</li>
+        <li>IoT Communication Protocol Hardening</li>
+        <li>End‑to‑End IoT Threat Monitoring</li>
+      </ul>
+    </div>
+
+    <div class="service-card" onclick="toggleService('quantum')">
+      <h3>Quantum Cryptography</h3>
+      <p>Lightweight encryption and quantum-resistant algorithms.</p>
+    </div>
+    <div id="quantum" class="service-detail" style="display:none; background:white; padding:25px; border-radius:12px; margin-top:10px; box-shadow:0 4px 12px rgba(0,0,0,0.08);">
+      <h3>Quantum Cryptography – Detailed Overview</h3>
+      <ul>
+        <li>Design of Quantum‑Safe Encryption Standards</li>
+        <li>Lightweight Cryptography for Edge Devices</li>
+        <li>Post‑Quantum Secure Protocol Development</li>
+        <li>Mathematical Optimization of Encryption Schemes</li>
+        <li>Research Collaboration with Academia</li>
+      </ul>
+    </div>
+
+    <div class="service-card" onclick="toggleService('rnd')">
+      <h3>R&D & Innovation</h3>
+      <p>Cutting-edge research in AI security, cryptography and embedded systems.</p>
+    </div>
+    <div id="rnd" class="service-detail" style="display:none; background:white; padding:25px; border-radius:12px; margin-top:10px; box-shadow:0 4px 12px rgba(0,0,0,0.08);">
+      <h3>R&D & Innovation – Detailed Overview</h3>
+      <ul>
+        <li>AI‑Driven Threat Prediction & Detection</li>
+        <li>Advanced Cryptographic Protocol Design</li>
+        <li>Embedded System Security Research</li>
+        <li>Prototype Design for Secure IoT Hardware</li>
+        <li>Collaboration with Research Institutions</li>
+      </ul>
+    </div>
+
+    <div class="service-card" onclick="toggleService('training')">
+      <h3>Training & Advisory</h3>
+      <p>Cybersecurity workshops, consulting and capability building.</p>
+    </div>
+    <div id="training" class="service-detail" style="display:none; background:white; padding:25px; border-radius:12px; margin-top:10px; box-shadow:0 4px 12px rgba(0,0,0,0.08);">
+      <h3>Training & Advisory – Detailed Overview</h3>
+      <ul>
+        <li>Cybersecurity Awareness Workshops</li>
+        <li>IoT Security Training for Developers</li>
+        <li>Corporate Security Advisory Programs</li>
+        <li>Academic Mentoring & Technical Sessions</li>
+        <li>Customized Training Modules</li>
+      </ul>
+    </div>
+
   </div>
 </section>
 
+<script>
+function toggleService(id) {
+  const el = document.getElementById(id);
+  if (el.style.display === "none") {
+    el.style.display = "block";
+  } else {
+    el.style.display = "none";
+  }
+}
+</script>
+
 <section id="research">
   <h2>Research & Innovation</h2>
-  <p>We work on advanced cryptography, AI-driven cybersecurity and secure IoT architectures. Our projects include lightweight ciphers, post-quantum protocols and adversarial defense systems.</p>
+  <p>Atharv SecureTech is built on a strong research backbone driven by academic rigor, deep technical expertise, and innovation‑centric development. Our R&D division collaborates closely with universities, industry partners, and research labs to develop next‑generation cybersecurity and IoT protection systems.</p>
+
+  <h3>Key Research Domains</h3>
+  <ul style="line-height:1.8; font-size:17px;">
+    <li><strong>Lightweight Cryptography:</strong> Development of optimized cryptographic primitives for low‑power and resource‑constrained IoT devices.</li>
+    <li><strong>Post‑Quantum Security:</strong> Design and analysis of quantum‑resistant algorithms and secure communication frameworks.</li>
+    <li><strong>AI‑Driven Defense Systems:</strong> Machine‑learning based anomaly detection, adversarial defense, and automated threat response models.</li>
+    <li><strong>Secure Embedded Systems:</strong> Hardware‑rooted security mechanisms, secure bootloaders, and firmware integrity systems.</li>
+    <li><strong>Network & Protocol Security:</strong> Development of secure communication protocols for IoT and distributed systems.</li>
+  </ul>
+
+  <h3>Current Research Projects</h3>
+  <ul style="line-height:1.8; font-size:17px;">
+    <li><strong>Lightweight Block Cipher for IoT:</strong> A highly efficient encryption algorithm designed to secure low‑energy devices such as sensors and wearables.</li>
+    <li><strong>Quantum‑Safe IoT Communication Stack:</strong> Development of forward‑secure, quantum‑robust key‑exchange protocols for connected systems.</li>
+    <li><strong>AI‑Powered Threat Intelligence Engine:</strong> A system that learns from real‑world attacks and automatically predicts emerging threats.</li>
+    <li><strong>Secure Smart‑Home Architecture:</strong> An end‑to‑end framework ensuring device, network, and cloud‑level protection for consumer IoT.</li>
+    <li><strong>Embedded Secure Bootloader:</strong> Firmware‑level protection ensuring device authenticity, rollback‑prevention, and anti‑tampering capabilities.</li>
+  </ul>
+
+  <h3>Innovation Pipeline</h3>
+  <p>Our innovation pipeline focuses on converting research outcomes into real‑world products and solutions. This includes:</p>
+  <ul style="line-height:1.8; font-size:17px;">
+    <li>Prototype development for commercial-grade IoT security modules.</li>
+    <li>Collaborative R&D with academic institutions and industry labs.</li>
+    <li>Patent filing for new algorithms and security architectures.</li>
+    <li>Technology transfer and startup collaboration programs.</li>
+  </ul>
+
+  <h3>Academic & Industry Collaborations</h3>
+  <p>Our research is strengthened through active collaborations with:</p>
+  <ul style="line-height:1.8; font-size:17px;">
+    <li>BITS Pilani Hyderabad Campus</li>
+    <li>Incubators & innovation labs</li>
+    <li>Cybersecurity research groups</li>
+    <li>Industry partners working on secure IoT, AI and embedded systems</li>
+  </ul>
+
 </section>
 
 <section id="team">
